--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "NODE_ENV=test mocha tests/**/*.test.js --exit"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,10 @@
     "sequelize": "6.3.4"
   },
   "devDependencies": {
+    "chai": "4.3.4",
+    "chai-http": "4.3.0",
     "dotenv": "^16.4.5",
+    "mocha": "8.4.0",
     "nodemon": "^3.1.4",
     "sequelize-cli": "6.6.1"
   }
