configuring api to accept requests from only one host

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DB_PASSWORD=senha123
 DB_DATABASE=todo_list_api
 DB_DATABASE_TEST=to_do_list_api_test
 DB_HOST=localhost
+FRONTEND_HOST=http://localhost:5173
